ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: ingress
  name: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ingress
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: ingress
    spec:
      containers:
        - image: nginx:latest
          name: ingress
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: ingress-cm0
              subPath: default.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: default.conf
                path: default.conf
            name: ingress-cm0
          name: ingress-cm0
