ingress-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'                 # Pod直配信（推奨）
    cloud.google.com/backend-config: '{"default":"ingress-hc"}'  # これで BackendConfig を適用
spec:
  type: ClusterIP
  selector:
    io.kompose.service: ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce" 
    # 固定グローバルIPを使う場合はここに置く（metadata直下）
    kubernetes.io/ingress.global-static-ip-name: wp-gclb-ip
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gce
spec:
  controller: k8s.io/ingress-gce
